# autosubst-experiments

./: MEETING.md  NOTES.md  README.md  apply_subst.v  autosubst-experiments.opam  coq-sulfur.opam  dune-project  extrinsic.v  intrinsic.v  intrinsic_nested.v  intrinsic_nested_ordinals.v  intrinsic_tags.v  notes.v  test.v  two_level.v
example/: dune  stlc.v
meetings/: 2025_05_21.md  2025_06_05.md  2025_06_30.md
metaprog/: custom_tactics.ml  custom_tactics.mli  dune  locally_nameless.ml  locally_nameless.mli  metaprog.ml  monad.ml  monad.mli  term_utils.ml  term_utils.mli
plugin/: constants.ml  consts.ml  custom_tactics.ml  custom_tactics.mli  dune  evaluation.ml  evaluation.ml_  g_plugin.mlg  gen_bijection.ml  gen_congr_lemmas.ml  gen_funcs.ml  gen_operations.ml  gen_ops_bijection.ml  gen_ops_concrete.ml  gen_ops_congr.ml  gen_ops_one.ml  gen_ops_push_eval.ml  gen_ops_reify_eval.ml  gen_ops_reify_eval.ml_  gen_ops_sign.ml  gen_ops_zero.ml  gen_push_eval.ml  gen_reify_eval.ml  gen_signature.ml  locally_nameless.ml  locally_nameless.mli  log.ml  main.ml  main.ml_  monad.ml  monad.mli  prelude.ml  reification.ml  reify.ml  reify.ml_  sig_parser.ml  signature.ml  simplification.ml_
test-ghost-reflection/: BasicAST.v  BasicMetaTheory.v  BasicMetaTheory.v_  GAST.v  TermMode.v  Typing.v  dune_
test-system-f/: Bug.v_  FAST.v  dune_
tests/: BasicMetaTheory.v  BasicMetaTheory.v_  CastRemoval.v  ContextDecl.v  GAST.v  Scoping.v  SubstNotations.v  TermNotations.v  Test.v  Univ.v  Util.v  dune  fintype.v  utlc.sig  utlc.v
theories/: All.v_  Bug.v  Cleanup.v  Constants.v  (+34 more)
(+47 files in other folders)
